WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185363
WebGL: Reset simulated values after validation fails
https://bugs.webkit.org/show_bug.cgi?id=185363
Summary
WebGL: Reset simulated values after validation fails
Dean Jackson
Reported
2018-05-06 08:15:57 PDT
WebGL: Reset simulated values after validation fails
Attachments
Patch
(6.88 KB, patch)
2018-05-06 08:21 PDT
,
Dean Jackson
andersca
: review+
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-sierra
(2.28 MB, application/zip)
2018-05-06 09:27 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews117 for mac-sierra
(3.04 MB, application/zip)
2018-05-06 09:56 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews106 for mac-sierra-wk2
(2.78 MB, application/zip)
2018-05-06 11:01 PDT
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2018-05-06 08:17:27 PDT
<
rdar://problem/39733417
>
Dean Jackson
Comment 2
2018-05-06 08:21:00 PDT
Created
attachment 339683
[details]
Patch
EWS Watchlist
Comment 3
2018-05-06 09:27:34 PDT
Comment on
attachment 339683
[details]
Patch
Attachment 339683
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/7586480
New failing tests: fast/canvas/webgl/index-validation-with-subsequent-draws.html
EWS Watchlist
Comment 4
2018-05-06 09:27:36 PDT
Created
attachment 339684
[details]
Archive of layout-test-results from ews102 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 5
2018-05-06 09:56:48 PDT
Comment on
attachment 339683
[details]
Patch
Attachment 339683
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/7586513
New failing tests: fast/canvas/webgl/index-validation-with-subsequent-draws.html
EWS Watchlist
Comment 6
2018-05-06 09:56:50 PDT
Created
attachment 339686
[details]
Archive of layout-test-results from ews117 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 7
2018-05-06 11:00:58 PDT
Comment on
attachment 339683
[details]
Patch
Attachment 339683
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/7586928
New failing tests: fast/canvas/webgl/index-validation-with-subsequent-draws.html
EWS Watchlist
Comment 8
2018-05-06 11:01:00 PDT
Created
attachment 339688
[details]
Archive of layout-test-results from ews106 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Dean Jackson
Comment 9
2018-05-07 10:36:30 PDT
Committed
r231441
: <
https://trac.webkit.org/changeset/231441
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug